--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation platform('com.google.firebase:firebase-bom:26.0.0')
-    implementation 'com.firebaseui:firebase-ui-auth:3.1.3'
+    implementation 'com.firebaseui:firebase-ui-auth:7.0.0'
     implementation 'com.google.firebase:firebase-firestore'
-    implementation 'com.google.android.gms:play-services-auth:18.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.facebook.android:facebook-android-sdk:8.1.0'
+    implementation 'com.facebook.android:facebook-login:8.1.0'
     implementation 'com.twitter.sdk.android:twitter:3.1.1'
     implementation 'com.twitter.sdk.android:twitter-core:3.3.0'
     //noinspection GradleCompatible
